<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/route_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/white">
    <RelativeLayout 
        android:id="@+id/layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginTop="20dip">
        <EditText 
            android:id="@+id/startpostion"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/startPostionHint"
    		android:textColorHint="@color/gray"
    		android:text="群星路"/>
        <EditText 
            android:id="@+id/endpostion"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/endPostionHint"
    		android:layout_below="@id/startpostion"
    		android:layout_marginTop="10dip"
    		android:textColorHint="@color/gray"
    		android:text="创意产业园"/>
    </RelativeLayout>
	<Button 
	    android:id="@+id/searchRoute"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginTop="20dip"
    	android:layout_below="@id/layout"
    	android:text="@string/search"/>
	<RelativeLayout 
	    android:layout_below="@id/searchRoute"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/routeViewPagers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <android.support.v4.view.PagerTabStrip
                android:id="@+id/routeViewPagerTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/> 
        </android.support.v4.view.ViewPager>
    </RelativeLayout>
</RelativeLayout>